Fix : add to cart form product image overflows the modal dialog box

--- a/pizza/orders/static/orders/master.css
+++ b/pizza/orders/static/orders/master.css
@@ -257,4 +257,8 @@ a.cart {
   .navbar-brand {
     display: none;
   }
+
+  #product-image-section {
+    display: none;
+  }
 }
